--- a/src/components/AutoCompleteText.css
+++ b/src/components/AutoCompleteText.css
@@ -33,9 +33,10 @@
 .AutoCompleteText li {
   padding: 10px 5px;
   cursor: pointer;
+  background-color: white;
 }
 
 .AutoCompleteText li:hover {
   text-decoration: underline;
-  background-color: rgba(128, 128, 128, 0.2);
+  background-color: rgb(200, 200, 200);
 }
